// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BillingInformation in app billing disabled does not render the trial information 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              0
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            Total People
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <div>
          <styled.div>
            <Box
              my={20}
              p={10}
            >
              <WithStyles(Grid)
                container={true}
                justify="space-between"
              >
                <WithStyles(Grid)
                  item={true}
                >
                  0
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  item={true}
                >
                  People on free trial
                </WithStyles(Grid)>
              </WithStyles(Grid)>
            </Box>
          </styled.div>
          <HorizontalDivider />
          <Box
            p={10}
          >
            <WithStyles(Grid)
              container={true}
              justify="space-between"
            >
              <WithStyles(Grid)
                data-jest="billableUserCount"
                item={true}
              >
                0
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
              >
                Billable people
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </Box>
        </div>
      </Block>
      <WithStyles(Grid)
        item={true}
        xs={9}
      >
        <styled.div>
          <Box
            my={20}
          >
            <h3>
              Current Rate & Billing Period
            </h3>
          </Box>
          <styled.div>
            Billing for 
             instance is not handled by this application. Email
             
            <a
              href="mailto:hello@shape.space"
            >
              hello@shape.space
            </a>
             for more information.
          </styled.div>
        </styled.div>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation in app billing disabled renders with the in app billing notice 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              0
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            Total People
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <div>
          <styled.div>
            <Box
              my={20}
              p={10}
            >
              <WithStyles(Grid)
                container={true}
                justify="space-between"
              >
                <WithStyles(Grid)
                  item={true}
                >
                  0
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  item={true}
                >
                  People on free trial
                </WithStyles(Grid)>
              </WithStyles(Grid)>
            </Box>
          </styled.div>
          <HorizontalDivider />
          <Box
            p={10}
          >
            <WithStyles(Grid)
              container={true}
              justify="space-between"
            >
              <WithStyles(Grid)
                data-jest="billableUserCount"
                item={true}
              >
                0
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
              >
                Billable people
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </Box>
        </div>
      </Block>
      <WithStyles(Grid)
        item={true}
        xs={9}
      >
        <styled.div>
          <Box
            my={20}
          >
            <h3>
              Current Rate & Billing Period
            </h3>
          </Box>
          <styled.div>
            Billing for 
             instance is not handled by this application. Email
             
            <a
              href="mailto:hello@shape.space"
            >
              hello@shape.space
            </a>
             for more information.
          </styled.div>
        </styled.div>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation in app billing enabled still within trial renders trial information 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              5
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            Total People
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <div>
          <styled.div>
            <Box
              my={20}
              p={10}
            >
              <WithStyles(Grid)
                container={true}
                justify="space-between"
              >
                <WithStyles(Grid)
                  item={true}
                >
                  5
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  item={true}
                >
                  People on free trial
                </WithStyles(Grid)>
              </WithStyles(Grid)>
            </Box>
          </styled.div>
          <HorizontalDivider />
          <Box
            p={10}
          >
            <WithStyles(Grid)
              container={true}
              justify="space-between"
            >
              <WithStyles(Grid)
                data-jest="billableUserCount"
                item={true}
              >
                0
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
              >
                Billable people
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </Box>
        </div>
      </Block>
      <Block
        title="Current Monthly Rate"
      >
        <FancyDollarAmount>
          0
        </FancyDollarAmount>
        <Box
          my={25}
        >
          $5.00
          /person per month
        </Box>
        <styled.div>
          Total monthly rate does not include people covered by free trial conditions.
        </styled.div>
      </Block>
      <Block
        title="Current Billing Period"
      >
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              Start date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/01/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              End date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/31/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <FreeTrial
          trialEndsAt="01/01/2022"
          trialLabel="Free trials used"
          trialTitle="FREE TRIAL"
          trialUsersCount={10}
          trialsUsedCount={5}
        />
      </Block>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation in app billing enabled trial expired renders without trial information 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              20
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          />
        </WithStyles(Grid)>
      </Block>
      <Block
        title="Current Monthly Rate"
      >
        <FancyDollarAmount>
          100
        </FancyDollarAmount>
        <Box
          my={25}
        >
          $5.00
          /person per month
        </Box>
        <styled.div>
          Total monthly rate does not include people covered by free trial conditions.
        </styled.div>
      </Block>
      <Block
        title="Current Billing Period"
      >
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              Start date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/01/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              End date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/31/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </Block>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation in app billing enabled with freemium users are over the limit does not render the trial information 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              6
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          />
        </WithStyles(Grid)>
      </Block>
      <Block
        title="Current Monthly Rate"
      >
        <FancyDollarAmount>
          30
        </FancyDollarAmount>
        <Box
          my={25}
        >
          $5.00
          /person per month
        </Box>
        <styled.div>
          Total monthly rate does not include people covered by free trial conditions.
        </styled.div>
      </Block>
      <Block
        title="Current Billing Period"
      >
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              Start date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/01/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              End date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/31/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </Block>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation in app billing enabled with freemium users not over the limit renders the trial information 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              3
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          />
        </WithStyles(Grid)>
      </Block>
      <Block
        title="Current Monthly Rate"
      >
        <FancyDollarAmount>
          0
        </FancyDollarAmount>
        <Box
          my={25}
        >
          $5.00
          /person per month
        </Box>
        <styled.div>
          Total monthly rate does not include people covered by free trial conditions.
        </styled.div>
      </Block>
      <Block
        title="Current Billing Period"
      >
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              Start date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/01/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              End date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/31/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <FreeTrial
          trialEndsAt={null}
          trialLabel="Free users"
          trialTitle="FREE"
          trialUsersCount={5}
          trialsUsedCount={3}
        />
      </Block>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation in app billing enabled within trial, exceeded trial users renders with trial and billing information 1`] = `
<styled.div>
  <Section
    title="Billing Information"
  >
    <WithStyles(Grid)
      container={true}
      justify="space-between"
    >
      <Block
        title="Current Active People"
      >
        <WithStyles(Grid)
          alignItems="flex-end"
          container={true}
          justify="space-between"
        >
          <WithStyles(Grid)
            item={true}
          >
            <Typography
              variant="emphasis"
            >
              100
            </Typography>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            Total People
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <div>
          <styled.div>
            <Box
              my={20}
              p={10}
            >
              <WithStyles(Grid)
                container={true}
                justify="space-between"
              >
                <WithStyles(Grid)
                  item={true}
                >
                  5
                </WithStyles(Grid)>
                <WithStyles(Grid)
                  item={true}
                >
                  People on free trial
                </WithStyles(Grid)>
              </WithStyles(Grid)>
            </Box>
          </styled.div>
          <HorizontalDivider />
          <Box
            p={10}
          >
            <WithStyles(Grid)
              container={true}
              justify="space-between"
            >
              <WithStyles(Grid)
                data-jest="billableUserCount"
                item={true}
              >
                95
              </WithStyles(Grid)>
              <WithStyles(Grid)
                item={true}
              >
                Billable people
              </WithStyles(Grid)>
            </WithStyles(Grid)>
          </Box>
        </div>
      </Block>
      <Block
        title="Current Monthly Rate"
      >
        <FancyDollarAmount>
          475
        </FancyDollarAmount>
        <Box
          my={25}
        >
          $5.00
          /person per month
        </Box>
        <styled.div>
          Total monthly rate does not include people covered by free trial conditions.
        </styled.div>
      </Block>
      <Block
        title="Current Billing Period"
      >
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              Start date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/01/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <WithStyles(Grid)
          container={true}
          justify="space-between"
          spacing={16}
        >
          <WithStyles(Grid)
            item={true}
          >
            <styled.span>
              End date:
            </styled.span>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
          >
            01/31/2015
          </WithStyles(Grid)>
        </WithStyles(Grid)>
        <FreeTrial
          trialEndsAt="01/01/2022"
          trialLabel="Free trials used"
          trialTitle="FREE TRIAL"
          trialUsersCount={5}
          trialsUsedCount={5}
        />
      </Block>
    </WithStyles(Grid)>
  </Section>
</styled.div>
`;

exports[`BillingInformation organization is deactivated renders nothing 1`] = `""`;
